@@ -1,10 +1,12 @@
-2010-09-07  Minh Dao Tran  <minhdt@e195-180.eduroam.tuwien.ac.at>
+2010-09-07  Minh Dao Tran  <dao@kr.tuwien.ac.at>
 
 	* include/QueryPlan.h: Clean up.
 	* include/QueryPlan.tcc: Likewise.
 	* src/ContextGenerator.cpp: Likewise.
 	* src/QueryPlan.cpp: Likewise.
-	* src/staticGen.cpp: Likewise.
+
+	* src/staticGen.cpp: Commandlines generated.
+
 
 2010-09-06  Minh Dao Tran  <dao@kr.tuwien.ac.at>
 
